objects/kuga_sub__Subscription__c.object
<CustomObject>
    <description>Kugamon Subscription - Related object to Salesforce Account and Contract that captures purchased Order Service Lines.</description>
    <fields>
        <fullName>kuga_sub__ARR__c</fullName>
        <description>Calculation of the Annual Recurring Revenue generated by the related Order Service Line record.</description>
        <label>Annual Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kuga_sub__Account__c</fullName>
        <description>Master-Detail field linking the relationship between Account and Subscription.</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kuga_sub__Active__c</fullName>
        <description>Field is Checked, if the following three conditions are met: 

(1) Associated Contract Record is Effective
(2) Associated Order Record Status is Approved or Released
(3) Subscription Dates are Blank or Today is within Start Date and End Date</description>
        <formula>AND(
  kuga_sub__ContractNumber__r.kuga_sub__Effective__c = true,
  OR(
    kuga_sub__Order__r.kugo2p__RecordStatus__c == &apos;Approved&apos;,
    kuga_sub__Order__r.kugo2p__RecordStatus__c == &apos;Released&apos;
  ),
  OR(
    AND(
      ISBLANK(kuga_sub__StartDate__c),
      ISBLANK(kuga_sub__EndDate__c)
    ),
    AND(
      kuga_sub__StartDate__c &lt;= Today(),
      kuga_sub__EndDate__c &gt;= Today()
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__ContractNumber__c</fullName>
        <description>Master-Detail field linking the relationship between Contract Number and Subscription.</description>
        <label>Contract Number</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kuga_sub__EndDate__c</fullName>
        <description>References the Order Service Line Date Service End field.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kuga_sub__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is Check via a Subscription Automation Scheduled Job if the following two criteria are met:

(1) Associated Contract Status is Activated
(2) Subscription Dates are Blank or Today is within Start Date and End Date</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__MRR__c</fullName>
        <description>Calculation of the Monthly Recurring Revenue generated by the related Order Service Line record.</description>
        <label>Monthly Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kuga_sub__NetAmount__c</fullName>
        <description>References the Order Service Line Net Amount field (Includes Tax)</description>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kuga_sub__OrderRecordType__c</fullName>
        <description>References the Order Record Type.</description>
        <formula>kuga_sub__Order__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kuga_sub__OrderServiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Order Service Line.</description>
        <label>Order Service Line</label>
        <referenceTo>kugo2p__SalesOrderServiceLine__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kuga_sub__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Order Number.</description>
        <label>Order Number</label>
        <referenceTo>kugo2p__SalesOrder__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kuga_sub__PurchasePrice__c</fullName>
        <description>References the Order Service Effective Price field.</description>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kuga_sub__Quantity__c</fullName>
        <description>References the Order Service Line Quantity field.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kuga_sub__Renew__c</fullName>
        <description>References the Order Service Line’s Renew field.

Field will be set to Unchecked if any of the conditions below exist:

(1) Order Service Line Record Status is Cancelled
(2) Contract is Cancelled
(3) Current Renewal Opportunity is Closed Lost
(4) Service is Not Renewable</description>
        <formula>if( kuga_sub__OrderServiceLine__r.kugo2p__RecordStatus__c = &apos;Cancelled&apos; || TEXT(kuga_sub__ContractNumber__r.Status) = &apos;Cancelled&apos; || 
TEXT(kuga_sub__ContractNumber__r.kuga_sub__RenewalOpportunity__r.StageName) = &apos;Closed Lost&apos;, False, kuga_sub__OrderServiceLine__r.kuga_sub__Renew__c)</formula>
        <label>Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__ServiceTerm__c</fullName>
        <description>References the Order Service Line Service Term field.</description>
        <formula>kuga_sub__OrderServiceLine__r.kugo2p__ServiceTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kuga_sub__Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Service.</description>
        <label>Service</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kuga_sub__StartDate__c</fullName>
        <description>References the Order Service Line Date Service Start field.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kuga_sub__Subscription__c</fullName>
        <description>Hyperlink to the related Subscription record.</description>
        <formula>HYPERLINK(&apos;/&apos;+  Id ,  Name  , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kuga_sub__Term__c</fullName>
        <description>References the Order Service Line Line Term field.</description>
        <formula>kuga_sub__OrderServiceLine__r.kugo2p__LineTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>References the Order Service Line Line Term field</inlineHelpText>
        <label>Line Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kuga_sub__TotalAmount__c</fullName>
        <description>References the Order Service Line Total Amount field.</description>
        <inlineHelpText>References the Order Service Line Total Amount field</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kuga_sub__UnitofTerm__c</fullName>
        <description>References the Order Service Line Unit of Term field.</description>
        <formula>kuga_sub__OrderServiceLine__r.kugo2p__UnitofTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit of Term</label>
        <type>Text</type>
    </fields>
    <label>Subscription</label>
    <listViews>
        <fullName>kuga_sub__All</fullName>
        <columns>NAME</columns>
        <columns>kuga_sub__Account__c</columns>
        <columns>kuga_sub__ContractNumber__c</columns>
        <columns>kuga_sub__Active__c</columns>
        <columns>kuga_sub__StartDate__c</columns>
        <columns>kuga_sub__EndDate__c</columns>
        <columns>kuga_sub__Order__c</columns>
        <columns>kuga_sub__MRR__c</columns>
        <columns>kuga_sub__ARR__c</columns>
        <columns>kuga_sub__NetAmount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>kuga_sub__All_Active</fullName>
        <columns>NAME</columns>
        <columns>kuga_sub__Account__c</columns>
        <columns>kuga_sub__ContractNumber__c</columns>
        <columns>kuga_sub__Quantity__c</columns>
        <columns>kuga_sub__MRR__c</columns>
        <columns>kuga_sub__Order__c</columns>
        <columns>kuga_sub__StartDate__c</columns>
        <columns>kuga_sub__EndDate__c</columns>
        <columns>kuga_sub__Renew__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>kuga_sub__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <nameField>
        <displayFormat>SUB-{00000}</displayFormat>
        <label>Subscription</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>